tests/fixtures/invalid/bytes_bitor_str.py
# Cannot bitwise OR Bytes and Str
x: bytes = b"hello" | "hello"
